# Agentic-AI-Tutorial

./: requirements.txt
autogen/: 1-autogen.ipynb  3.0-autogen.ipynb  3.0-serper.py  3.2-teams.ipynb
autogen/projects/analyzer_gpt/: code_executer_agent.py  pyproject.toml
autogen/projects/analyzer_gpt/agents/: code_executor_agent.py  data_analyzer_agent.py
autogen/projects/analyzer_gpt/config/: constants.py  loader.py
autogen/projects/analyzer_gpt/exception/: custom_exception.py
autogen/projects/analyzer_gpt/logger/: logger.py  logger1.py
autogen/projects/analyzer_gpt/models/: openai_model_client.py
autogen/projects/analyzer_gpt/prompts/: agent_prompts.py
autogen/projects/analyzer_gpt/utils/: docker_util.py
langchain_basics/: gettingstarted.ipynb
langchain_basics/2.1-Dataingestion/: dataingestion.ipynb
langchain_basics/2.2-DataTransformer/: data_transformer.ipynb
langchain_basics/2.3-Embeddings/: embeddings.ipynb
langchain_basics/2.4-VectorDatabases/FAISS/: code.ipynb
langchain_basics/2.4-VectorDatabases/FAISS/vs/: index.faiss  index.pkl
langchain_basics/2.4-VectorDatabases/Pinecone/: code.ipynb
langgraph/: langgraph-2.ipynb  langgraph3.ipynb  langgraph4.ipynb  langgraph5.ipynb  langgraph7.ipynb  multiagent.ipynb  tools.ipynb
