[project]
name = "analyzer-gpt"
version = "0.1.0"
description = "agentic analyzer project"
authors = [
    { name = "Muhammed Fayiz", email = "muhammedfayiz122@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    # your actual requirements go here
]

[project.urls]
Homepage = "https://github.com/muhammedfayiz122/LLMOPS-Tutorials/tree/main/document_portal"

[project.scripts]
rag-project = "document.portal.app:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
